 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/Dispenser_account__c.object-meta.xml
<CustomObject>
    <label>Dispenser account</label>
    <nameField>
        <displayFormat>DAcc-{0000}</displayFormat>
        <label>Dispenser  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispenser accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>