 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>