 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/Bank_owner__c.field-meta.xml
<CustomField>
    <fullName>Bank_owner__c</fullName>
    <label>Bank owner</label>
    <referenceTo>Dispenser_bank__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Dispenser_accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>