 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/Card_number__c.field-meta.xml
<CustomField>
    <fullName>Card_number__c</fullName>
    <label>Card number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>