 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/Currency_type__c.field-meta.xml
<CustomField>
    <fullName>Currency_type__c</fullName>
    <label>Currency type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUB</fullName>
                <default>true</default>
                <label>RUB</label>
            </value>
            <value>
                <fullName>BYN</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>