 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/Is_credit_card__c.field-meta.xml
<CustomField>
    <fullName>Is_credit_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is credit card</label>
    <type>Checkbox</type>
</CustomField>