 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/maximum_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>maximum_loan_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>maximum loan amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>