 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>