 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/validationRules/Card_number_len_is_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_number_len_is_10</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNUMBER( Card_number__c )  &amp;&amp;  (LEN( Card_number__c ) != 10)</errorConditionFormula>
    <errorDisplayField>Card_number__c</errorDisplayField>
    <errorMessage>It should be 10 digits.</errorMessage>
</ValidationRule>