 Create and Edit Aura Components/force-app/main/default/objects/Dispenser_account__c/validationRules/PIN_len_is_10.validationRule-meta.xml
<ValidationRule>
    <fullName>PIN_len_is_10</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNUMBER(  PIN__c  )  &amp;&amp;  (LEN(  PIN__c  ) != 4)</errorConditionFormula>
    <errorDisplayField>PIN__c</errorDisplayField>
    <errorMessage>It should be 4 digits.</errorMessage>
</ValidationRule>